fix: update padding for mat-sidenav-content to improve scrollbar accessibility

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -678,7 +678,7 @@ mat-sidenav-content {
   align-items: center;
   justify-content: space-between;
   gap: 16px;
-  // padding: 8px 0px;
+  padding: 0 10px 0 0; // Adds some padding towards the scrollbar.
   position: absolute;
   top: var(--toolbar-height, 64px);
   left: 0;
